--- a/localisation/english/replace/replace_modifiers_l_english.yml
+++ b/localisation/english/replace/replace_modifiers_l_english.yml
@@ -474,7 +474,7 @@
  MODIFIERS_ARMY_ATTACK_FACTOR:0 "£attack_texticon  Division Attack"
  MODIFIERS_ARMY_DEFENCE_FACTOR:0 "£defence_texticon  Division Defense"
  MODIFIERS_ARMY_CORE_ATTACK_FACTOR:0 "£attack_core_texticon  Division Attack on core territory"
- MODIFIERS_ARMY_CORE_DEFENCE_FACTOR:0 "£defence_core_texticon  Division Defense on core territory"
+ MODIFIERS_ARMY_CORE_DEFENCE_FACTOR:0 "£defence_core_texticon  £defence_texticon  Division Defense on core territory"
  MODIFIERS_ARMY_INFANTRY_ATTACK_FACTOR:0 "£attack_infantry_texticon  Infantry Attack"
  MODIFIERS_ARMY_INFANTRY_DEFENCE_FACTOR:0 "£defence_infantry_texticon  Infantry Defense"
  MODIFIERS_ARMY_ARMOR_ATTACK_FACTOR:0 "£attack_tank_texticon  Armor Attack"
@@ -516,9 +516,9 @@
  MODIFIER_STRAT_BOMBING_VISIBILITY:0 "£strat_bombing_visibility_texticon  Strategic bombing visibility"
  MODIFIER_STRAT_BOMBING_VISIBILITY_DESC:0 "The chance of being detected by the enemy, when on strategic bombing missions."
  MODIFIER_ARMY_INFANTRY_ATTACK_FACTOR:0 "£attack_infantry_texticon  Infantry Division Attack"
- MODIFIER_ARMY_INFANTRY_DEFENCE_FACTOR:0 "£defence_infantry_texticon  Infantry Division Defense"
+ MODIFIER_ARMY_INFANTRY_DEFENCE_FACTOR:0 "£defence_infantry_texticon  Infantry £defence_texticon  Division Defense"
  MODIFIER_ARMY_ARMOR_ATTACK_FACTOR:0 "£attack_tank_texticon  Armor Division Attack"
- MODIFIER_ARMY_ARMOR_DEFENCE_FACTOR:0 "£defence_tank_texticon  Armor Division Defense"
+ MODIFIER_ARMY_ARMOR_DEFENCE_FACTOR:0 "£defence_tank_texticon  Armor £defence_texticon  Division Defense"
  MODIFIER_ARMY_ARTILLERY_ATTACK_FACTOR:0 "£attack_artillery_texticon  Artillery Attack"
  MODIFIER_ARMY_ARTILLERY_DEFENCE_FACTOR:0 "£defence_artillery_texticon  Artillery Defense"
  MODIFIERS_SUBMARINE_DETECTION_FACTOR:0 "£spotting  Submarine Detection"
@@ -1030,8 +1030,8 @@
  MODIFIER_RESISTANCE_TARGET_ON_OUR_OCCUPIED_STATES:1 "£political_violence_texticon  Resistance Target in our states occupied by the enemy"
  MODIFIER_RESISTANCE_DECAY:0 "£political_violence_loss_texticon  Resistance Decay Speed"
  MODIFIER_RESISTANCE_GROWTH:0 "£political_violence_gain_texticon  Resistance Growth Speed"
- MODIFIER_RESISTANCE_DECAY_ON_OUR_OCCUPIED_STATES:1 "£political_violence_loss_enemy_texticon  Resistance Decay Speed in our states occupied by the enemy"
- MODIFIER_RESISTANCE_GROWTH_ON_OUR_OCCUPIED_STATES:1 "£political_violence_gain_enemy_texticon  Resistance Growth Speed in our states occupied by the enemy"
+ MODIFIER_RESISTANCE_DECAY_ON_OUR_OCCUPIED_STATES:1 "£political_violence_loss_enemy_texticon  £political_violence_loss_texticon  Resistance Decay Speed in our states occupied by the enemy"
+ MODIFIER_RESISTANCE_GROWTH_ON_OUR_OCCUPIED_STATES:1 "£political_violence_gain_enemy_texticon  £political_violence_gain_texticon  Resistance Growth Speed in our states occupied by the enemy"
  MODIFIER_COMPLIANCE_STARTING_VALUE:0 "£compliance_texticon  Starting Compliance"
  MODIFIER_COMPLIANCE_GROWTH:0 "£compliance_gain_texticon  Compliance Growth Speed"
  MODIFIER_COMPLIANCE_GROWTH_ON_OUR_OCCUPIED_STATES:1 "£compliance_gain_enemy_texticon  Compliance Growth Speed in our states occupied by the enemy"
@@ -1045,7 +1045,7 @@
  MODIFIER_RESISTANCE_DAMAGE_TO_GARRISONS_ON_OUR_OCCUPIED_STATES:1 "£political_violence_damage_texticon  Damage to Enemy Garrisons in our states occupied by the enemy"
  MODIFIER_ENEMY_INTEL_IMPACT:0 "Enemy Intel Impact"
  MODIFIER_REQUIRED_GARRISON_FACTOR:0 "£garrison_texticon  Required Garrisons"
- MODIFIER_RECRUITABLE_POPULATION:0 "£manpower_texticon  Additional Recruitable Population"
+ MODIFIER_RECRUITABLE_POPULATION:0 "£manpower_texticon  Additional £manpower_texticon  Recruitable Population"
  MODIFIER_RECRUITABLE_POPULATION_FACTOR:0 "£manpower_texticon  Recruitable Population"
  MODIFIER_RESISTANCE_ACTIVITY_FACTOR:0 "£political_violence_texticon  Resistance Activity Chance"
  state_resource_oil:0 "Oil"
@@ -1781,7 +1781,7 @@
  MODIFIER_EQUIPMENT_CAPTURE_FOR_CONTROLLER: "£infantry_equipment_texticon  Equipment Capture Ratio Gain for state controller"
  MODIFIER_EQUIPMENT_CAPTURE_FACTOR_FOR_CONTROLLER: "£infantry_equipment_texticon  Equipment Capture Ratio Modifier for state controller"
  MODIFIER_ENEMY_ARMY_SPEED_FACTOR: "£enemy_speed_texticon  Enemy Divisions speed"
- MODIFIER_ENEMY_LOCAL_SUPPLIES: "£enemy_supply_texticon  Enemy Local Supplies"
+ MODIFIER_ENEMY_LOCAL_SUPPLIES: "£enemy_supply_texticon  Enemy £supply_texticon  Local Supplies"
  MODIFIER_ENEMY_ATTRITION: "£enemy_attrition_texticon  Enemy Division Attrition"
  MODIFIER_ENEMY_TRUCK_ATTRITION_FACTOR: "£enemy_attrition_supply_truck_texticon  Enemy Supply Truck Attrition"
  modifier_army_sub_unit_marines_attack_factor: "£attack_marines_texticon  Marines Attack"
@@ -1850,7 +1850,7 @@
  COMPLIANCE_DECAY_VALUE:0 "£compliance_gain_texticon  Compliance Growth: §R$VALUE|3$%§!"
  COMPLIANCE_DECAY_VALUE_CAPPED:0 "£compliance_gain_texticon  Compliance Growth: §R$VALUE|3$%§! (Capped from §R$VALUE_NON_CAPPED|3$%§!)"
  COMPLIANCE_DECAY_INFO:0 "Additional Compliance Change:"
- ADDITIONAL_RECRUITABLE_POPULATION_ENTRY:0 "£manpower_texticon  Additional Recruitable Population: $VALUE|+%3$"
+ ADDITIONAL_RECRUITABLE_POPULATION_ENTRY:0 "£manpower_texticon  Additional £manpower_texticon  Recruitable Population: $VALUE|+%3$"
  RECRUITABLE_POPULATION_ENTRY:0 "£manpower_texticon  Recruitable Population Factor: $VALUE|+%0$"
  RESISTANCE_TARGET_FLOW:0 "£political_violence_texticon  Resistance spread from $STATE|H$: $FLOW|-%1$"
  COMPLIANCE_ADDITIONAL_DAILY_GAIN:0 "£compliance_gain_texticon  Additional Daily Compliance Gain: $GAIN$"
