--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4263,15 +4263,15 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ottoman.102.t:0 "Unintended Consequences"
  ottoman.102.d:0 "As we tried to use the violence between minorities in Macedonia, it came to bite us in the ass. Minorities became relentless and widespread violence quickly became a norm."
  ottoman.102.a:0 "We should crush them in no time"
- TUR_ottoman_greek_minority_modify_resistance_target_negative_15:0 "Modify £ww1_game_rule_flag_GRE §YGreek Minority§! as: Resistance Target: §R+15%§!"
- TUR_ottoman_south_slavic_minority_modify_resistance_target_negative_15:0 "Modify £ww1_game_rule_flag_YUG §YSouth Slavic Minority§! as: Resistance Target: §R+15%§!"
+ TUR_ottoman_greek_minority_modify_resistance_target_negative_15:0 "Modify £ww1_game_rule_flag_GRE §YGreek Minority§! as: £political_violence_texticon  Resistance Target: §R+15%§!"
+ TUR_ottoman_south_slavic_minority_modify_resistance_target_negative_15:0 "Modify £ww1_game_rule_flag_YUG §YSouth Slavic Minority§! as: £political_violence_texticon  Resistance Target: §R+15%§!"
  ottoman.103.t:0 "Unintended Consequences"
  ottoman.103.d:0 "Recent land handover to Kurds that is populated by Armenians and Assyrians have resulted in Kurdish tribes massacring minority Christians and looting their villages for their own ends. This event will result inn numerous deaths."
  ottoman.103.a:0 "We must turn a blind eye."
  ottoman.104.t:0 "Unintended Consequences"
  ottoman.104.d:0 "Egyptian officials, elite and even the people itself has started to actively oppose our attempts of integrating Egypt. Luckly to us, this opposition wont last forever; but while it does, it will hurt."
  ottoman.104.a:0 "We should've seen that coming."
- TUR_ottoman_arab_minority_modify_resistance_target_negative_15_resistance_growth_negative_50:0 "Modify £ww1_flag_ARB §YArab Minority§! by\nResistance Target: §R+5%§!\nResistance Growth Speed: §R+50%§!"
+ TUR_ottoman_arab_minority_modify_resistance_target_negative_15_resistance_growth_negative_50:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£political_violence_texticon  Resistance Target: §R+5%§!\n£political_violence_gain_texticon  Resistance Growth Speed: §R+50%§!"
  ottoman.105.t:0 "Ottoman-Russian Subjugation"
  ottoman.105.d:0 "The Ottomans and Russians has been enemies for centuries. But recently, in an effort to join the French faction, [TUR.GetName] has agreed with the Russians to become their subjects. With this agreement, Ottomans became a member of [FRA.GetFactionName] and Russians got access to the Mediterranean."
  ottoman.105.a:0 "This was necessary for the survival of our nation."
@@ -4429,15 +4429,15 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ottoman.148.t:0 "Unintended Consequences"
  ottoman.148.d:0 "As our governent has moved to eradicate the Albanian terrorism in countryside, the Albanian freedom fighters have started to increase their resistance against our empire."
  ottoman.148.a:0 "We'll increase the gendarmerie."
- TUR_ottoman_albanian_minority_modify_resistance_target_negative_15_resistance_growth_negative_15:0 "Modify £ww1_flag_ALB §YAlbanian Minority§!by\nResistance Target: §R+5%§!\nResistance Growth Speed: §R+15%§!"
+ TUR_ottoman_albanian_minority_modify_resistance_target_negative_15_resistance_growth_negative_15:0 "Modify £ww1_flag_ALB §YAlbanian Minority§!by\n£political_violence_texticon  Resistance Target: §R+5%§!\n£political_violence_gain_texticon  Resistance Growth Speed: §R+15%§!"
  ottoman.149.t:0 "Unintended Consequences"
  ottoman.149.d:0 "After the enaction of the recent Kurdish assimilation policy, Kurdish tribes in the East have started to revolt and raid neighboring vilalges in an effort to resist against our efforts to integrate them."
  ottoman.149.a:0 "We'll crush the revolts in no time."
- TUR_ottoman_kurdish_minority_modify_resistance_target_negative_10_resistance_growth_negative_15:0 "Modify £ww1_flag_KUR §YKurdish Minority§! by\nResistance Target: §R+10%§!\nResistance Growth Speed: §R+15%§!"
+ TUR_ottoman_kurdish_minority_modify_resistance_target_negative_10_resistance_growth_negative_15:0 "Modify £ww1_flag_KUR §YKurdish Minority§! by\n£political_violence_texticon  Resistance Target: §R+10%§!\n£political_violence_gain_texticon  Resistance Growth Speed: §R+15%§!"
  ottoman.150.t:0 "Unintended Consequences"
  ottoman.150.d:0 "Though we're not directly trying to integrate them, the local egyptian population saw our policies imposed on them as an effort to reintegrate them to the empire. Because of that, they're intensified their resistance against us."
  ottoman.150.a:0 "Send extra garrisons to the region."
- TUR_ottoman_arab_minority_modify_resistance_target_negative_15_resistance_growth_negative_15:0 "Modify £ww1_flag_ARB §YArab Minority§! by\nResistance Target: §R+15%§!\nResistance Growth Speed: §R+15%§!"
+ TUR_ottoman_arab_minority_modify_resistance_target_negative_15_resistance_growth_negative_15:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£political_violence_texticon  Resistance Target: §R+15%§!\n£political_violence_gain_texticon  Resistance Growth Speed: §R+15%§!"
  ottoman.151.t:0 "Elections of [GetYear]"
  ottoman.151.d:0 "After the troubling previous years of our empire, we can finally hold a peaceful non-violent and free elections within the parliament. Just to be safe, the elections will be cleared from all extremist members, meaning the candidates of this election will be non-partisan and quite neutral in their governance whether they support İttihat ve Terakki Fırkası or not."
  ottoman.151.a:0 "İbrahim Hakkı Paşa wins."
@@ -4454,7 +4454,7 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ottoman.153.d:0 "As the Hizb-i Terakki faction controls a large part of the government, they've managed to appoint their own candidates in the elections. While mostly secular and left-wing, these candidates are still loyal to the İttihatist cause. Just as expected, Hizb-i Terakki faction will further strengthen its place in the party and the government after this election."
  ottoman.153.a:0 "Rıza Bey wins."
  ottoman.153.b:0 "Rıza Tevfik Bey wins."
- TUR_ottoman_armenian_minority_modify_attrition_10_resistance_target_negative_35_resistance_growth_negative_15:0 "Modify £ww1_flag_ARM §YArmenian Minority§!by\nDivision Attrition: §R+10.00%§!\nResistance Target: §R+35%§!\nResistance Growth Speed: §R+15%§!"
+ TUR_ottoman_armenian_minority_modify_attrition_10_resistance_target_negative_35_resistance_growth_negative_15:0 "Modify £ww1_flag_ARM §YArmenian Minority§!by\nDivision Attrition: §R+10.00%§!\n£political_violence_texticon  Resistance Target: §R+35%§!\n£political_violence_gain_texticon  Resistance Growth Speed: §R+15%§!"
  ottoman.154.t:0 "Unintended Consequences"
  ottoman.154.d:0 "As we've eliminated all the Greeks in Thrace, a problem which was unpredictable at the time has happened. Due to their removal, the economic infrastructure that was initially held by the Greeks are now collapsing, causing an overall decrease in economic activity in the region."
  ottoman.154.a:0 "The regino will recover, eventually..."
@@ -4476,7 +4476,7 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ottoman.160.t:0 "Unintended Consequences"
  ottoman.160.d:0 "As other Armenians have already seen from things happened in Anatolia, they're decided to preemptively start a resistance against our rule. The resistance we've faced in Anatolia by Armenians will be witnessed again in the Caucasus."
  ottoman.160.a:0 "Let them join their "brothers"."
- TUR_ottoman_arab_minority_modify_attrition_5_recruitable_population_5:0 "Modify £ww1_flag_ARB §YArab Minority§!by\nDivision Attrition: §R+5.00%§!\nRecruitable Population: §R-5.00%§!"
+ TUR_ottoman_arab_minority_modify_attrition_5_recruitable_population_5:0 "Modify £ww1_flag_ARB §YArab Minority§!by\nDivision Attrition: §R+5.00%§!\n£manpower_texticon  Recruitable Population: §R-5.00%§!"
  ottoman.161.t:0 "Unintended Consequences"
  ottoman.161.d:0 "Our efforts to expand control over Levant has seen mass demonstrations by the Arab population. Untill we fully crush the Arab seperatists, the state will see casual revolts and even hardships for our army."
  ottoman.161.a:0 "Prepare the ropes."
@@ -4486,8 +4486,8 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ottoman.163.t:0 "Al-Idrisi's Rebellion in Asir"
  ottoman.163.d:0 "A debate in the court over Sharia law reignited Al-Idrisi's rebellion. Alongside the overall instability it'll cause in the region, Al-Idrisi can contact foreigners for support. In an event of a major war, we may have to seek truce with them."
  ottoman.163.a:0 "They're too insignificant to harm to grand Ottoman state."
- TUR_ottoman_arab_minority_modify_resistance_target_10:0 "Modify £ww1_flag_ARB §YArab Minority§! as: Resistance Target: §R+10%§!"
- TUR_ottoman_arab_minority_modify_resistance_target_10_2:0 "Modify £ww1_flag_ARB §YArab Minority§! as: Resistance Target: §G-10%§!"
+ TUR_ottoman_arab_minority_modify_resistance_target_10:0 "Modify £ww1_flag_ARB §YArab Minority§! as: £political_violence_texticon  Resistance Target: §R+10%§!"
+ TUR_ottoman_arab_minority_modify_resistance_target_10_2:0 "Modify £ww1_flag_ARB §YArab Minority§! as: £political_violence_texticon  Resistance Target: §G-10%§!"
  ottoman.164.t:0 "Elections of [GetYear]"
  ottoman.164.d:0 "With the victory of İttihat-ı Muhammedi Fırkası, the Islamic Conservative party, in this elections, the party needs a leader to shape the party agenda and lead the nation. Different factions within the party striving for the majority in the party. One of these factions are modernists led by Said-i Nursi which takes a renewed look at İslam and on how to promote it. On the other hand, hardliners led by Mustafa Sabri Efendi arguing that the survival of the empire can only be achieved through the elimination of nationalism and proclaiming Muslim unity. The victor is to shape the fate of the empire and Islam to some extend."
  ottoman.164.a:0 "Said-i Nursi wins."
@@ -4503,12 +4503,12 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ottoman.168.t:0 "Unintended Consequences"
  ottoman.168.d:0 "As our integration and Turkification attepmts started targeting our Egyptian vilayets, the local popultion has expressed their discontent quite violently. Our empytian provinces are seeing a chain of uprisings we've never seen from. Unless we crush the revolutionaries, it will spark a bottom to top revolution in Egypt and its break away."
  ottoman.168.a:0 "We'll teach them their place for once and for all."
- TUR_ottoman_arab_minority_modify_attrition_resistance_target_negative_15_resistance_growth_negative_15:0 "Modify £ww1_flag_ARB §YArab Minority§! by\nDivision Attrition: §R+10.00%§!\nResistance Target: §R+15%§!\nResistance Growth Speed: §R+15%§!"
+ TUR_ottoman_arab_minority_modify_attrition_resistance_target_negative_15_resistance_growth_negative_15:0 "Modify £ww1_flag_ARB §YArab Minority§! by\nDivision Attrition: §R+10.00%§!\n£political_violence_texticon  Resistance Target: §R+15%§!\n£political_violence_gain_texticon  Resistance Growth Speed: §R+15%§!"
  ottoman.169.t:0 "Al-Qahtaniya Asks to Expand Arab Conscriptions."
  ottoman.169.d:0 "As we've expanded military recruitment to all sides of our empire, it has saw many attention by many minorities. By enlisting in the army, many soldiers have gained various privilages. With such new innovations, an Arab organization Al-Qahtaniya has asked our support to enlist more Arabs. Originally being a literature society under İttihak ve Terakki Fırkası, they're benefited more under our liberal rule. The society also has its paramilitary wing, which has been made official with the expansion of our new army service. Seeking to protect their newly gained rights and to protect the government who brought them these rights, they've asked to reqruit more Arabs for our army."
  ottoman.169.a:0 "It's too risky to give them too much power."
  ottoman.169.b:0 "Let them recruit more people, it'll only be to our advantage."
- TUR_ottoman_arab_recruitable_population_factor:0 "Modify £ww1_flag_ARB §YArab Minority§! as: Recruitable Population: §G+8.00%§!"
+ TUR_ottoman_arab_recruitable_population_factor:0 "Modify £ww1_flag_ARB §YArab Minority§! as: £manpower_texticon  Recruitable Population: §G+8.00%§!"
  TUR_giving_too_much_power_to_arabs_may_lead_to_smth:0 "§RGiving too much power to Al-Qahtaniya might result in untentional consequences.§!"
  ottoman.170.t:0 "Al-Qahtaniya Influences Elections"
  ottoman.170.d:0 "AS the recent elections were held within the empire, Al-Qahtaniya with its newly gained influence over a large part of our empire has decided to push for its own members. As we've let them do a mass recruitment of the Arabs within the empire, they've raised an amount of paramilitaries that is a match for the Ottoman army. Our hands are tied, and there's not much to do. We must welcome the Al-Qahtaniya appointed new grand vizier."
@@ -4528,14 +4528,14 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ottoman.175.t:0 "Increased Garrisons in Arab Vilayets"
  ottoman.175.d:0 "As the results of the next ellections are already predictable, Arab populace of the empire has started demonstrations. Fearing if they'll start an uprising after the next elections that without a doubt will be rigged, Turkish ministers have increased garrisons in the Arab vilayets."
  ottoman.175.a:0 "I though we were brothers."
- TUR_ottoman_arab_resistance_target_resistance_decay:0 "Modify £ww1_flag_ARB §YArab Minority§! by\nResistance Target: §G-5%§!\nResistance Decay Speed: §G+5%§!"
+ TUR_ottoman_arab_resistance_target_resistance_decay:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£political_violence_texticon  Resistance Target: §G-5%§!\n£political_violence_loss_texticon  Resistance Decay Speed: §G+5%§!"
  ottoman.176.t:0 "Early Elections"
  ottoman.176.d:0 "Due to the unpopular opinion of an Arab party ruling the empire, the Turkish parties have united and used any mean to depose our rule. Unfortunately, there's no way for us to win the elections. Now, any progress of ours will be reverted as we've never assumed power."
  ottoman.176.a:0 "This is the lowest point of our democracy."
  ottoman.177.t:0 "Unintended Consequences"
  ottoman.177.d:0 "After the Arabs assumed the leadership of the empire, their new ethnic policies are perceived pretty unpopular by the Turks. Once those who enjoyed full rights under the empire is now seen as second class citizens. For this very reason, Turks have become another minority group in the empire, just like how Arabs used to be."
  ottoman.177.a:0 "A minority in our own land."
- TUR_add_turkish_minority:0 "Modify §YTurkish Minority§! by\nLocal Factories: §R-15%§!\nResistance Target: §R-15%§!\nRecruitable Population: §R-15.00%§!"
+ TUR_add_turkish_minority:0 "Modify §YTurkish Minority§! by\n£civ_factory  Local Factories: §R-15%§!\n£political_violence_texticon  Resistance Target: §R-15%§!\n£manpower_texticon  Recruitable Population: §R-15.00%§!"
  TUR_unlock_minority_turkish_focuses:0 "New §Yfocuses§! will be unlocked to deal with the §YTurkish Minority§!."
  ottoman.178.t:0 "Mehmed Said Paşa Passes Away."
  ottoman.178.d:0 "Mehmed Said Paşa has developed bronchitis in the last previous years. Unfortunately, he has failed to overcome his sickness and passed away recently. With his unfortunate death, we need to find a replacement for him."
@@ -4547,14 +4547,14 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ottoman.181.t:0 "Radical Change in Racial Policies"
  ottoman.181.d:0 "Following the early elections and fall of Al Qahtaniya, Grand Vizier Rıza Paşa has announced new policies targeting the minorities and racial groups. Arguing that the liberal policies towards minorities have gone too far, he reverted many of the changes, especially those about the racial diversity in the army."
  ottoman.181.a:0 "We won't repeat our past mistakes."
- TUR_ottoman_arab_recruitable_population_factor2:0 "Modify £ww1_flag_ARB §YArab Minority§! as: Recruitable Population: §R-8.00%§!"
+ TUR_ottoman_arab_recruitable_population_factor2:0 "Modify £ww1_flag_ARB §YArab Minority§! as: £manpower_texticon  Recruitable Population: §R-8.00%§!"
  TUR_rebanned_minority_parties_tt:0 "§YMinority parties§! are banned."
- TUR_ottoman_arab_recruitable_population_factor05:0 "Modify £ww1_flag_ARB §YArab Minority§! as: Recruitable Population: §G+5.00%§!"
- TUR_ottoman_arab_recruitable_population_factor052:0 "Modify £ww1_flag_ARB §YArab Minority§! as: Recruitable Population: §R-5.00%§!"
- TUR_ottoman_armenian_recruitable_population_factor05:0 "Modify £ww1_flag_ARM §YArmenian Minority§! as: Recruitable Population: §G+5.00%§!"
- TUR_ottoman_armenian_recruitable_population_factor052:0 "Modify £ww1_flag_ARM §YArmenian Minority§! as: Recruitable Population: §R-5.00%§!"
- TUR_ottoman_south_slavic_recruitable_population_factor05:0 "Modify £ww1_game_rule_flag_YUG §YSouth Slavic Minority§! as: Recruitable Population: §G+5.00%§!"
- TUR_ottoman_south_slavic_recruitable_population_factor052:0 "Modify £ww1_game_rule_flag_YUG §YSouth Slavic Minority§! as: Recruitable Population: §R-5.00%§!"
+ TUR_ottoman_arab_recruitable_population_factor05:0 "Modify £ww1_flag_ARB §YArab Minority§! as: £manpower_texticon  Recruitable Population: §G+5.00%§!"
+ TUR_ottoman_arab_recruitable_population_factor052:0 "Modify £ww1_flag_ARB §YArab Minority§! as: £manpower_texticon  Recruitable Population: §R-5.00%§!"
+ TUR_ottoman_armenian_recruitable_population_factor05:0 "Modify £ww1_flag_ARM §YArmenian Minority§! as: £manpower_texticon  Recruitable Population: §G+5.00%§!"
+ TUR_ottoman_armenian_recruitable_population_factor052:0 "Modify £ww1_flag_ARM §YArmenian Minority§! as: £manpower_texticon  Recruitable Population: §R-5.00%§!"
+ TUR_ottoman_south_slavic_recruitable_population_factor05:0 "Modify £ww1_game_rule_flag_YUG §YSouth Slavic Minority§! as: £manpower_texticon  Recruitable Population: §G+5.00%§!"
+ TUR_ottoman_south_slavic_recruitable_population_factor052:0 "Modify £ww1_game_rule_flag_YUG §YSouth Slavic Minority§! as: £manpower_texticon  Recruitable Population: §R-5.00%§!"
  ottoman.182.t:0 "Selecting the Head of the Party"
  ottoman.182.d:0 "As Al Qahtaniya has eliminated all opposition, its time to decide who gets to take the leadership of the party. There are many voices among our organization and party. Liberals, conservatives, militarists and even the monarchists are trying to take the power for themselves. The group which takes the power will decide the future of the part and the empire."
  ottoman.182.a:0 "Nuri Al Said for a strong Arab empire."
