--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -769,14 +769,14 @@
  TUR_poverty_in_state:0 "Poverty in State"
  TUR_overpopulated_state:0 "Overpopulated State"
  TUR_centralization_of_the_empire:0 "Centralization of the Empire"
- TUR_centralization_of_the_empire_tt:0 "For every state shown in the §YOttoman Minority Map§! without a negative minority modifier, we'll get §G+0.001§! Daily Political Power Gain, §G+0.1%§! Daily Command Power Gain Multiplier and §G+0.10%§! Recruitable Population Factor.\n\n"
+ TUR_centralization_of_the_empire_tt:0 "For every state shown in the §YOttoman Minority Map§! without a negative minority modifier, we'll get §G+0.001§! Daily Political Power Gain, §G+0.1%§! Daily Command Power Gain Multiplier and §G+0.10%§! £manpower_texticon  Recruitable Population Factor.\n\n"
  TUR_collapse_of_trade_infrastructure:0 "Collapse of Trade Infrastructure"
  TUR_mass_looting:0 "Mass Looting"
  TUR_violence_in_state:0 "Violence in State"
  TUR_dead_economic_activity:0 "Dead Economic Activity"
  TUR_brealdown_of_economic_infrastructure:0 "Breakdown of Economic Infrastructure"
  TUR_purification_of_the_empire:0 "Purification of the Empire"
- TUR_purification_of_the_empire_tt:0 "For every state shown in the §YOttoman Minority Map§! without a negative minority modifier, we'll get §G+0.1%§! Daily Command Power Gain Multiplier, §G+0.10%§! Damage to Garrisons, §G-0.10%§! Recruitable Population Factor, §G-0.1%§! Resistance Activity Chance and §G-0.10%§! §YMilitary Factory§! construction speed.\n\n"
+ TUR_purification_of_the_empire_tt:0 "For every state shown in the §YOttoman Minority Map§! without a negative minority modifier, we'll get §G+0.1%§! Daily Command Power Gain Multiplier, §G+0.10%§! Damage to Garrisons, §G-0.10%§! £manpower_texticon  Recruitable Population Factor, §G-0.1%§! Resistance Activity Chance and §G-0.10%§! §YMilitary Factory§! construction speed.\n\n"
  TUR_massacre_of_minorities:0 "Massacre on Minorities"
  TUR_breakdown_of_economic_infrastructure_2:0 "Breakdown of Economic Infrastructure"
  TUR_local_cooperation_with_the_enemy:0 "Local Cooperation with the Enemy"
